[package]
name = "project01"
version = "0.1.0"
authors = ["HenryBurns <hhburnsboy@gmail.com>"]
edition = "2018"

[[bin]]
name="multi-steg"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
